Start the RDD process early
Categories
(Core :: Audio/Video: Playback, defect, P3)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox134 | --- | fixed |
People
(Reporter: jya, Assigned: aosmond)
References
(Blocks 1 open bug, Regressed 1 open bug)
Details
Attachments
(1 file)
In bug 1681043 ; we modified the startup procedure so that each process where decoding can happen will themselves check on what decoding capabilities are present.
This is then used by each content process to determine which process to use to decode a particular content.
For this work properly, the RDD process needs to be started early. Unfortunately, doing so causes exposes several problems in some tests (see https://bugzilla.mozilla.org/show_bug.cgi?id=1681043#c14)
One issue is with the sandbox on mac; when attempting to launch the RDD process it and to create the sandbox it crashes due to some variables not set yet.
And tests such as test_aboutmemory5.xhtml ; test_aboutmemory7.xhtml fail due to different expectations (the RDD process pid will now show in the output, which the test didn't account for)
Comment 1•5 years ago
|
||
The memory reporter test failures: https://treeherder.mozilla.org/jobs?repo=try&revision=31484d3b6ced6876767be8a991875b80d2fe1cfb&selectedTaskRun=QgVe3DoWToGF-Rm-1K-BYQ.0
For test_aboutmemory5.xhtml, we might need to add something similar to this handling for the socket process:
or to be more selective about which vsize entries we match out of the string.
For test_aboutmemory7.xhtml, to avoid the non-determinism from the RDD process ID (and whether the RDD process is present at all), we'll need to add a fake reporter for it here:
and adjust the startExpected string (and perhaps have a version of it that includes the RDD process and one without).
Updated•5 years ago
|
| Assignee | ||
Updated•1 year ago
|
| Assignee | ||
Comment 2•1 year ago
|
||
This patch makes it so that we launch the RDD process relatively early
in the Firefox startup. This will improve the latency when we began
playback for the first video.
Description
•