Bug 1684991 - Start the RDD process early. r=media-playback-reviewers,alwu

This patch makes it so that we launch the RDD process relatively early
in the Firefox startup. This will improve the latency when we began
playback for the first video.

Differential Revision: https://phabricator.services.mozilla.com/D229427